valid fix